# EasyDB

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix
client/: CMakeLists.txt  main.cpp
doc/index/: index.md
doc/optimizer/: optimizer.md
doc/query_analyse/: query_analyse.md
doc/spj/: spj.md
doc/storage/: storage.md
src/: CMakeLists.txt  easydb.cpp
src/analyze/: CMakeLists.txt  analyze.cpp
src/buffer/: CMakeLists.txt  buffer_pool_manager.cpp  lru_replacer.cpp
src/catalog/: CMakeLists.txt  column.cpp  schema.cpp
src/common/: CMakeLists.txt  config.cpp
src/concurrency/: CMakeLists.txt  lock_manager.cpp
src/execution/: CMakeLists.txt  execution_manager.cpp  executor_aggregation.cpp  executor_delete.cpp  executor_index_scan.cpp  executor_insert.cpp  executor_merge_join.cpp  executor_nestedloop_join.cpp  executor_projection.cpp  executor_seq_scan.cpp  executor_sort.cpp  executor_update.cpp
src/include/: defs.h
src/include/analyze/: analyze.h
src/include/buffer/: buffer_pool_manager.h  lru_replacer.h  replacer.h
src/include/catalog/: column.h  schema.h
src/include/common/: common.h  condition.h  config.h  context.h  errors.h  exception.h  hashutil.h  logger.h  macros.h  mergeSorter.h  portal.h  rid.h  rwlatch.h
src/include/concurrency/: lock_manager.h
src/include/execution/: execution_empty.h  execution_manager.h  executor_abstract.h  executor_aggregation.h  executor_delete.h  executor_hash_join.h  executor_index_scan.h  executor_insert.h  executor_merge_join.h  executor_nestedloop_join.h  executor_projection.h  executor_seq_scan.h  executor_sort.h  executor_update.h
src/include/optimizer/: optimizer.h
src/include/parser/: ast.h  ast_dot_printer.h  ast_printer.h  parse_node.h  parser.h  parser_defs.h
src/include/planner/: plan.h  planner.h
src/include/record/: bitmap.h  record_printer.h  rm.h  rm_defs.h  rm_file_handle.h  rm_manager.h  rm_scan.h
src/include/recovery/: log_defs.h  log_manager.h  log_recovery.h
src/include/storage/disk/: disk_manager.h
src/include/storage/index/: ix_defs.h  ix_extendible_hash_index_handle.h  ix_index_handle.h  ix_manager.bak.h  ix_manager.h  ix_scan.h
src/include/storage/page/: page.h  table_page.h
src/include/storage/table/: tuple.h
src/include/system/: sm_defs.h  sm_manager.h  sm_meta.h
src/include/transaction/: transaction.h  transaction_manager.h  txn_defs.h
src/include/type/: abstract_pool.h  bigint_type.h  decimal_type.h  integer_parent_type.h  integer_type.h  limits.h  numeric_type.h  timestamp_type.h  type.h  type_id.h  type_util.h  value.h  varlen_type.h
src/parser/: CMakeLists.txt  ast.cpp  lex.l  yacc.y
src/planner/: CMakeLists.txt  planner.cpp
src/record/: CMakeLists.txt  rm_file_handle.cpp  rm_scan.cpp
src/recovery/: CMakeLists.txt  log_manager.cpp  log_recovery.cpp
src/storage/disk/: CMakeLists.txt  disk_manager.cpp
src/storage/index/: CMakeLists.txt  ix_extendible_hash_index_handle.cpp  ix_index_handle.cpp  ix_scan.cpp
src/storage/page/: CMakeLists.txt  table_page.cpp
src/storage/table/: CMakeLists.txt  tuple.cpp
src/system/: CMakeLists.txt  sm_manager.cpp
src/transaction/: CMakeLists.txt  transaction_manager.cpp
src/type/: CMakeLists.txt  bigint_type.cpp  decimal_type.cpp  integer_parent_type.cpp  integer_type.cpp  timestamp_type.cpp  type.cpp  value.cpp  varlen_type.cpp
test/: CMakeLists.txt
test/buffer/: lru_replacer_test.cpp
test/comprehensive_test/: comprehensive_test.cpp
test/concurrency/: test.sql
test/optimizer/: optimize.sql  optimizer_test.sh
test/parser/: parser_ast_printer.cpp  parser_test.cpp  parser_test.sh
test/spj/: spj_test.sh
test/storage/disk/: disk_manager_test.cpp
test/storage/index/: extendible_hash_index_test.cpp
test/type/: type_test.cpp
web_client/: package-lock.json  package.json  vite.config.js
web_client/proxy/: proxy_server.py
web_client/src/: App.vue  main.js  style.css
web_client/src/api/: file.js  user.js
web_client/src/assets/font/: font.css
web_client/src/components/: ReEcharts.vue
web_client/src/router/: index.js
web_client/src/styles/: mixin.scss
web_client/src/utils/: auth.js  cache.js  nprogress.js  request.js  ruoyi.js  websocketclient.js
web_client/src/views/: Home.vue  Panel.vue
